CmdProxy を削除した